--- a/package.yaml
+++ b/package.yaml
@@ -20,7 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/radar#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+- base >= 4.7
 
 internal-libraries:
   radar-lib:
@@ -40,7 +40,7 @@ executables:
     dependencies:
       - radar-lib
   vocab1:
-    source-dir: ch01
+    source-dirs: src/ch01
     main: vocab1.hs
     other-moudles: []
     dependencies: text
