--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@
 
 # [Choice] Alpine version: 3.14, 3.13, 3.12, 3.11
 ARG VARIANT="3.15"
-FROM  haskell:9.0.2
+FROM 290007431/haskell_with_hls:9.0.2_re_1
 
 # ** [Optional] Uncomment this section to install additional packages. **
 # RUN apk update \
