--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                radar
+name:                hid-learn
 version:             0.1.0.0
-github:              "githubuser/radar"
+github:              "githubuser/hid-learn"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,43 +17,36 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/radar#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/hid-learn#readme>
 
 dependencies:
-- base >= 4.7
+- base >= 4.7 && < 5
 
-internal-libraries:
-  radar-lib:
-    source-dirs: src/Radar
-    exposed-modules: Radar
-    other-modules: []
-
+library:
+  source-dirs: src
 
 executables:
-  radar-exe:
+  hid-learn-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
-      - -threaded
-      - -rtsopts
-      - -with-rtsopts=-N
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
     dependencies:
-      - radar-lib
-  vocab1:
+    - hid-learn
+  vocab01:
+    main: vocab01.hs
     source-dirs: src/ch01
-    main: vocab1.hs
-    other-moudles: []
-    dependencies: text
-  
+     
 
 tests:
-  radar-test:
-    main:                Test.hs
-    source-dirs:         test/radar
+  hid-learn-test:
+    main:                Spec.hs
+    source-dirs:         test
     ghc-options:
-      - -threaded
-      - -rtsopts
-      - -with-rtsopts=-N
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
     dependencies:
-      - radar-lib
-      - random >=1.2 && <1.3
+    - hid-learn
