--- a/package.yaml
+++ b/package.yaml
@@ -25,10 +25,16 @@ dependencies:
 library:
     source-dirs: 
       - src/ch02/radar
+      - src/ch05
+      - expr/rpn
     exposed-modules: Radar
     other-modules: []
     dependencies:
       - fmt
+      - random
+      - mtl
+      - extra
+      - text
 
 executables:
   hid-learn-exe:
@@ -56,6 +62,47 @@ executables:
     dependencies:
       - text
       - fmt
+  sumlist:
+    main: sumlist.hs
+    source-dirs: src/ch05
+    dependencies:
+      - text
+      - fmt
+      - mtl
+  filec:
+    main: filecount.hs
+    source-dirs: src/ch05
+    dependencies:
+      - text
+      - fmt
+      - mtl
+      - extra
+  eval1:
+    source-dirs: expr/rpn
+    main: EvalRPNExceptT.hs
+    dependencies:
+      - mtl >= 2.0 && < 2.3
+      - text
+      - text-show
+  du:
+    source-dirs: du
+    main: Main.hs
+    dependencies:
+      - mtl
+      - text
+      - unix-compat
+      - directory
+      - filepath
+      - extra
+      - text-show
+      - optparse-applicative
+
+    default-extensions: 
+      - OverloadedStrings
+      - RecordWildCards
+      - NamedFieldPuns
+    
+  
 
 tests:
   hid-learn-test:
