--- a/stackquotes/stackquotes.cabal
+++ b/stackquotes/stackquotes.cabal
@@ -25,8 +25,11 @@ source-repository head
 
 library
   exposed-modules:
+      Charts
       Lib
+      Main
       QuoteData
+      StatReport
   other-modules:
       Paths_stackquotes
   hs-source-dirs:
